# TESH-Query

./: .coverage  .gitignore  .pre-commit-config.yaml  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READINESS_CHECKLIST.md  README.md  REORGANIZATION.md  STABILITY_ASSESSMENT.md  URGENT_STABILITY_REPORT.md  demo.py  examples.py  index.html  main.py  output.xlsx  pyproject.toml  pytest.ini  repository_analysis.md  requirements.txt  session_export.json  test-inspect.py  test-llm-execution.py  test.py  test_api.py  test_logging_refactor.py  test_pandas.py  usage_metrics.jsonl  validate_core.py  validate_production.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy_teshq.yaml
.idx/: dev.nix
cli/: config.py  db.py  query.py
core/: db.py  introspect.py  llm.py  query.py
db_schema/: schema.json  schema.txt
docs/: ui_components.md  usage-guide.md
examples_output/: schema.json  schema.txt
logs/: token_usage_2025-09-09.jsonl
teshq/: __init__.py  _version.py  api.py
teshq/cli/: analytics.py  config.py  db.py  health.py  main.py  query.py  subscribe.py
teshq/cli/ui/: __init__.py
teshq/core/: introspect.py  llm.py  query.py
teshq/utils/: __init__.py  analytics.py  cli_logging.py  config.py  connection.py  database_connectors.py  error_handling.py  formater.py  health.py  keys.py  logging.py  output.py  retry.py  save.py  subscription_client.py  token_tracking.py  ui.py  validation.py
tests/: basic_functionality_test.py
tests/integration/: test_integration.py  test_production_readiness.py
tests/unit/: test_cli.py  test_config.py  test_core.py  test_error_handling.py  test_introspect.py  test_utils.py  test_validation.py
utils/: db.py  formater.py  keys.py
