[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "teshq"
dynamic = ["version"]
description = "A CLI tool that converts natural language queries into SQL and returns relevant tables using natural language."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["sql", "cli", "database", "natural language", "AI", "LLM"]
authors = [
  { name = "Shashank", email = "shashankgundas1@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "SQLAlchemy~=2.0.41",
    "python-dotenv~=1.1.0",
    "psycopg2-binary~=2.9.10",
    "langchain~=0.3.25",
    "langchain-core~=0.3.61",
    "langchain-google-genai~=2.1.4",
    "typer[all]~=0.15.4",
    "rich~=14.0.0",
    "logfire~=3.16.0",
    "tabulate~=0.9.0",
    "pandas"

]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.5",
    "autopep8~=2.3.2",
    "pre-commit~=4.2.0",
    "flake8~=6.1.0",
    "isort~=5.13.2",
    "build",
]
# Database drivers (optional)
mysql = [
    "PyMySQL~=1.1.0",
    "mysql-connector-python~=8.4.0",
]
oracle = [
    "cx_Oracle~=8.3.0",
    "oracledb~=2.0.0",
]
cassandra = [
    "cassandra-driver~=3.29.0",
    "cqlalchemy~=1.0.0",
]
# Analytics and monitoring (optional)
langsmith = [
    "langsmith~=0.1.0",
]
# All database drivers
all-databases = [
    "PyMySQL~=1.1.0",
    "mysql-connector-python~=8.4.0",
    "cx_Oracle~=8.3.0",  
    "oracledb~=2.0.0",
    "cassandra-driver~=3.29.0",
    "cqlalchemy~=1.0.0",
]
# All optional features
all-features = [
    "PyMySQL~=1.1.0",
    "mysql-connector-python~=8.4.0",
    "cx_Oracle~=8.3.0",  
    "oracledb~=2.0.0",
    "cassandra-driver~=3.29.0",
    "cqlalchemy~=1.0.0",
    "langsmith~=0.1.0",
]

[project.urls]
Homepage = "https://github.com/theshashank1/TESH-Query"
"Bug Tracker" = "https://github.com/theshashank1/TESH-Query/issues"

[project.scripts]
teshq = "teshq.cli.main:app"

[tool.setuptools_scm]
# This section is added to configure setuptools_scm
# It will automatically use git tags to determine the version

[tool.setuptools]
packages = ["teshq", "teshq.cli", "teshq.cli.commands", "teshq.cli.ui", "teshq.core", "teshq.eda", "teshq.utils"]
